--- a/casper1/Base.lproj/Main.storyboard
+++ b/casper1/Base.lproj/Main.storyboard
@@ -881,7 +881,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="33O-0H-e9e"/>
+        <segue reference="1dv-tN-5wJ"/>
         <segue reference="a6A-Nf-OEq"/>
     </inferredMetricsTieBreakers>
     <resources>
