--- a/casper1/Base.lproj/LaunchScreen.storyboard
+++ b/casper1/Base.lproj/LaunchScreen.storyboard
@@ -19,12 +19,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="En Güzel Yemeklere Hoşgeldin" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lea-x0-fx1">
                                 <rect key="frame" x="20" y="359" width="353" height="79"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <color key="textColor" name="yaziRenk2"/>
+                                <color key="textColor" name="AccentColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="ArkaPlan"/>
+                        <color key="tintColor" name="AccentColor"/>
                         <constraints>
                             <constraint firstItem="Lea-x0-fx1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="300" id="At0-YE-xKt"/>
                             <constraint firstItem="Lea-x0-fx1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="EKe-vl-Tly"/>
@@ -38,11 +39,11 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="ArkaPlan">
-            <color red="0.65299999713897705" green="0.9089999794960022" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        <namedColor name="AccentColor">
+            <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="yaziRenk2">
-            <color red="1" green="0.15199999511241913" blue="0.99000000953674316" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        <namedColor name="ArkaPlan">
+            <color red="0.40700000524520874" green="0.31600001454353333" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
